# balloondb

./: .gitattributes  .gitignore  AGENT_CONTRACT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
09_SCRIPTS/: RUN_BQL_SELFTEST_V03G1.ps1
_frozen/: G5_AUTONOMY_DRIFT.md
_frozen/H4A_BROKEN_BQL_COMPAT/: README.md  bql_compat_fix_v03h4a.original.py
_frozen/V03H4A_BROKEN_NAMEERROR_HELPER_R/: README.md  RUN_BQL_COMPAT_FIX_V03H4A.ps1.frozen  bql_compat_fix_v03h4a.py.frozen
audit/: LARGE_AUDIT_FILES_LOCAL_ONLY.md  PRECOMMIT_GATE_V00D.md  balloondb_repo_intake_refined_report.md  balloondb_repo_intake_refined_summary.csv  balloondb_repo_plan.json  cleanup_v00c_install_report.json  staging_manifest.json  verify_staging_report.json
audit/v00e/: V00E_PORTABILITY_FIX_REPORT.json
audit/v03h4b/: V03H4B_CASE_ENVELOPES.jsonl  (+2 more)
balloondb_core/: bql_parser.py  cli.py
benchmarks/: BENCHMARK_PLAN.md
docs/: PRODUCT_BOUNDARIES.md  QUICKSTART.md  REPO_CLEANUP_V00C_STATUS.md
migration/from_bpack/: README.md
rust/balloondb_core_rs/: Cargo.toml
rust/balloondb_core_rs/src/: batch_v00q.rs  lib.rs  v00j.rs
specs/: API_SPEC.md  BINARY_COMPACTION_SNAPSHOT_V00L.md  BINARY_FORMAT_V00J.md  BINARY_INDEX_QUERY_V00K.md  BINARY_TRANSACTION_V00M.md  BQL_SPEC.md  FORMAT_SPEC.md  GLOSSARY.md  PRODUCT_ARCHITECTURE.md  RUST_BACKEND_SHIM_BENCHMARK_V00P.md  RUST_BATCH_BACKEND_BENCHMARK_V00Q.md  RUST_CORE_PYO3_V00O.md  RUST_DROPIN_V00J_COMPAT_V00O3.md  RUST_DROPIN_V00J_COMPAT_V00O3A.md  SOURCE_MEMORY_SPEC.md  TRUST_STATE_SPEC.md  V00J_WIRE_FORMAT.md
(+133 files in other folders)
