[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "balloondb-core-rs"
version = "0.0.3"
description = "Rust/PyO3 drop-in core for BalloonDB V00J-compatible binary records"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }

[tool.maturin]
manifest-path = "rust/balloondb_core_rs/Cargo.toml"
module-name = "balloondb_core_rs"
features = ["pyo3/extension-module"]
