[package]
name = "balloondb_core_rs"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
description = "Rust/PyO3 experimental binary core for BalloonDB"

[lib]
name = "balloondb_core_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22.6", features = ["extension-module"] }
sha2 = "0.10"
hex = "0.4"
