[package]
name = "balloondb_core_rs"
version = "0.0.3"
edition = "2021"
license = "AGPL-3.0-only"
description = "Rust/PyO3 drop-in compatible binary core for BalloonDB V00J records"

[lib]
name = "balloondb_core_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22.6", features = ["extension-module"] }
sha2 = "0.10"
hex = "0.4"
